Updated game launcher