@@ -12,14 +12,14 @@ import ua.notion.utils.OsUtils;
 
 public class GameLauncher {
 
+  // TODO костиль! може бути диск D І Т.П.
   private static final String STEAM_PATH_WIN = "C:\\Program Files (x86)\\Steam\\steam.exe";
   private static final String STEAM_PROCESS = "steam";
+
   private static final System.Logger LOGGER = System.getLogger(GameLauncher.class.getName());
 
-  public GameLauncher() { // TODO тимчасово public, private по дефолту
-  }
-
-  public static void play(Game game) {
+  public void play(Game game) {
+    launchSteam();
     if (OsUtils.isWindows()) {
       launchWindows(game);
     } else {
@@ -27,7 +27,7 @@ public class GameLauncher {
     }
   }
 
-  private static void launchLinux(Game game) {
+  private void launchLinux(Game game) {
     String script = Data.SCRIPT_PATH.getAbsolutePath();
     String protonPath = game.defaultProtonVersion();
 
@@ -43,7 +43,7 @@ public class GameLauncher {
     executeProcess(command, game);
   }
 
-  private static void launchWindows(Game game) {
+  private void launchWindows(Game game) {
     List<String> command = new ArrayList<>();
     command.add(game.targetPath());
 
@@ -52,15 +52,15 @@ public class GameLauncher {
     executeProcess(command, game);
   }
 
-  private static void executeProcess(List<String> command, Game game) {
+  private void executeProcess(List<String> command, Game game) {
     if (game.targetPath() == null) {
-      System.err.println("Error: Game target path is null");
+      LOGGER.log(System.Logger.Level.ERROR, "Error: Game target path is null");
       return;
     }
 
     File workDir = new File(game.targetPath()).getParentFile();
 
-    System.out.println("DEBUG COMMAND: " + command);
+    LOGGER.log(System.Logger.Level.DEBUG, "DEBUG COMMAND: " + command);
 
     try {
       ProcessBuilder pb = new ProcessBuilder(command);
@@ -69,19 +69,20 @@ public class GameLauncher {
 
       Process process = pb.start();
 
-      System.out.println("Started game: " + game.title());
+      LOGGER.log(System.Logger.Level.INFO, "Started game: " + game.title());
 
       process.onExit().thenAccept(p -> {
-        System.out.println("Game closed: " + game.title());
-        System.out.println("Exit code: " + p.exitValue());
+        LOGGER.log(System.Logger.Level.INFO,
+            "Game closed: " + game.title() + " (Exit code: " + p.exitValue() + ")");
       });
     } catch (IOException e) {
-      System.err.println("Error launching " + game.title() + ": " + e.getMessage());
+      LOGGER.log(System.Logger.Level.ERROR,
+          "Error launching " + game.title() + ": " + e.getMessage(), e);
       e.printStackTrace();
     }
   }
 
-  private static void addArguments(List<String> command, String arguments) {
+  private void addArguments(List<String> command, String arguments) {
     if (arguments == null || arguments.isBlank()) {
       return;
     }
@@ -92,25 +93,30 @@ public class GameLauncher {
     }
   }
 
-  public void launchSteam() { // todo поки що для вінди хоч
+  public void launchSteam() { // todo remove public???
     if (isSteamRunning()) {
-      System.out.println("STEAM ALREADY RUNNING");
+      LOGGER.log(System.Logger.Level.INFO, "Steam is already running.");
       return;
     }
+
+    LOGGER.log(System.Logger.Level.INFO, "Attempting to launch Steam...");
+    List<String> command = new ArrayList<>();
+
+    if (OsUtils.isWindows()) {
+      // TODO тут той самий костиль
+      command.add(STEAM_PATH_WIN);
+    } else {
+      command.add(STEAM_PROCESS);
+    }
     try {
-      if(OsUtils.isWindows()) {
-        Runtime.getRuntime().exec(STEAM_PATH_WIN);
-      }
-      else if(OsUtils.isLinux() || OsUtils.isMac()){
-        Runtime.getRuntime().exec(STEAM_PROCESS);
-      }
-      System.out.println("Steam launch command sent!");
+      new ProcessBuilder(command).start();
+      LOGGER.log(System.Logger.Level.INFO, "Steam launch command sent!");
     } catch (IOException e) {
-      System.out.println("Error! Steam not found! " + e);
+      LOGGER.log(System.Logger.Level.ERROR, "Error launching Steam: " + e.getMessage());
     }
   }
 
-  public boolean isSteamRunning() { // TODO ТИМЧАСОВО PUBLIC
+  private boolean isSteamRunning() {
     return isProcessRunning(STEAM_PROCESS);
   }
 
